<resources>
    <string name="app_name">Github Apps</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="detail">Detail</string>
    <string name="_0">0</string>
    <string name="public_repos">Public Repos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Search…</string>
    <string name="search_github_user">Search</string>
    <string name="no_bio">There is no bio</string>
    <string name="no_company">Company not set</string>
    <string name="no_blog">Blog not set</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="link_blog">Link Blog</string>
    <string name="company">Company</string>
    <string name="home">Home</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="setting">Setting</string>
    <string name="favorite_un_favorite">Favorite/UnFavorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">Share this user</string>
    <string name="favorite_user_added">%1$s successfully added to favorites</string>
    <string name="favorite_user_deleted">%1$s successfully removed from favorites</string>
    <string name="go_retry">Retry</string>
    <string name="reach_maximum_request">You\'re reach the maximum request from GitHub API. Please try again later.</string>
    <string name="language">Language</string>
    <string name="pick_language">Pick Language</string>
    <string name="no_data">Empty Data</string>
    <string name="lets_search">Let\'s search GitHub users</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_home">Home</string>
    <string name="no_internet_and_no_cached">No internet connection and no cached data for %1$s.</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong</string>
    <string name="dark_mode_active">Dark mode is activated</string>
    <string name="dark_mode_deactive">Dark mode is deactivated</string>
</resources>