<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.heyproject.githubapps.presentation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.heyproject.githubapps.presentation.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.heyproject.githubapps.presentation.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.heyproject.githubapps.presentation.favorite.FavoriteFragment"
        android:label="@string/favorite_users"
        tools:layout="@layout/fragment_favorite" />
    <activity
        android:id="@+id/detailActivity"
        android:name="com.heyproject.githubapps.presentation.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail">
        <argument
            android:name="login"
            app:argType="string" />
    </activity>

</navigation>