<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.setting.SettingFragment">

    <data>

        <variable
            name="viewModel"
            type="com.heyproject.githubapps.presentation.setting.SettingViewModel" />

        <variable
            name="settingFragment"
            type="com.heyproject.githubapps.presentation.setting.SettingFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/side_margin"
        android:paddingVertical="@dimen/half_side_margin">

        <TextView
            android:id="@+id/textViewDarkMode"
            style="@style/TextContent.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            app:layout_constraintBottom_toBottomOf="@+id/switch_theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLanguage"
            style="@style/TextContent.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_side_margin"
            android:text="@string/language"
            app:layout_constraintStart_toStartOf="@+id/textViewDarkMode"
            app:layout_constraintTop_toBottomOf="@+id/textViewDarkMode" />

        <TextView
            android:id="@+id/textViewPickLanguage"
            style="@style/TextContent.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_language"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLanguage"
            app:layout_constraintEnd_toEndOf="@+id/switch_theme"
            app:layout_constraintTop_toTopOf="@+id/textViewLanguage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>